--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>
-  <head>
-    <title>
-    </title>
-  </head>
-  <body>
-    <b>Goto : </b><br>
-        <a href="lab 1.html">Lab1</a><br>
-        <a href="lab 2.html">Lab2</a><br>
-        <a href="lab 3.html">Lab3</a><br>
-        <a href="lab 4.html">Lab4</a><br>
-        <a href="lab 5.html">Lab5</a>
-  </body>
+<head>
+<title>This is my first html page.</title>
+</head>
+<body>
+welcome to my first </br> html page.
+</body>
 </html>
