--- a/lab 1.html
+++ b/lab 1.html
@@ -3,7 +3,7 @@
 <title>This is my first html page.</title>
 </head>
 <body>
-welcome to my first </br> html page.
+welcome to my first </br> html page.<br>
   
    <a href="lab 2.html">Lab2</a><br>
         <a href="lab 3.html">Lab3</a><br>
