--- a/lab 1.html
+++ b/lab 1.html
@@ -3,9 +3,9 @@
 <title>This is my first html page.</title>
 </head>
 <body>
-welcome to my first </br> html page.<br>
+welcome to my first html page.</br>
   
-   <a href="lab 2.html">Lab2</a><br>
+          <a href="lab 2.html">Lab2</a><br>
         <a href="lab 3.html">Lab3</a><br>
         <a href="lab 4.html">Lab4</a><br>
         <a href="lab 5.html">Lab5</a>
