--- a/lab 2.html
+++ b/lab 2.html
@@ -5,6 +5,6 @@
 <body bgcolor="red">
 <h1 style="color:pink;"><center> Indore city </h1></center>
 <h4 style="color:yellow;">Indore is a city in west-central India. It’s known for the 7-story Rajwada Palace and the Lal Baag Palace, which date back to Indore’s 19th-century Holkar dynasty. The Holkar rulers are honored by a cluster of tombs and cenotaphs at Chhatri Baag. The night market Sarafa Bazar sells street food. East is the Indo-Gothic Gandhi Hall and clock tower. </h4>
-<img src="C:\Users\simran lekhwani\Downloads\indore.jpg">
+<img src="https://cdn.discordapp.com/attachments/480768322187689985/940951275619635230/WhatsApp_Image_2022-02-09_at_6.13.52_PM.jpeg">
 </body>
 </html>
