--- a/lab 5.html
+++ b/lab 5.html
@@ -5,7 +5,7 @@
 <style>
 body
 {background-color:rgb(51, 133, 255);
-background-image: url('C:/Users/simran lekhwani/Downloads/landscape.jpg');
+background-image: url('https://cdn.discordapp.com/attachments/480768322187689985/940951275619635230/WhatsApp_Image_2022-02-09_at_6.13.52_PM.jpeg');
 background-size:100%;
 font-family:engravers mt;
 font-size:20px;
