--- a/lab 3.html
+++ b/lab 3.html
@@ -27,7 +27,9 @@
     <td>201/km<sup>2</sup></td>
   </tr>
 
-</table>
+</table></br>
+  <a href="lab 4.html">Lab4</a><br>
+  <a href="lab 5.html">Lab5</a>
 
 
 
