--- a/lab 3.html
+++ b/lab 3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-<body bgcolor="blue">
+<body bgcolor="darkturquoise">
 <h1 style="color:red;font-size:60px;"><center>population density</center></h1>
 <p style="font-size:30px;">Population density is the concentration of individuals within a species in a specific geographic locale. Population density data can be used to quantify demographic information and to assess relationships with ecosystems, human health, and infrastructure.</p>
 <h2 style="font-size:40px;"><left>population density of some Indian states</left></h2>
