--- a/lab 4.html
+++ b/lab 4.html
@@ -20,6 +20,7 @@ p {
 </head>
 <body> 
 <h1>css tutorial </h1>
-<p> This is my first css page</p>
+<p> This is my first css page</p></br>
+  <a href="lab 5.html">Lab5</a>
 </body>
 </html>
